--- a/public/css/common.css
+++ b/public/css/common.css
@@ -65,3 +65,17 @@ footer{
     margin-left: 1em;
     cursor: pointer
 }
+
+.git_icon{
+font-size: 100px;
+display: flex;
+justify-content: center;
+}
+
+.fa-github{
+    color: black;
+}
+
+.fa-github:active{
+    color: white;
+}
